# certifi

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  clippy.toml  docker-compose.yml  provisioning.example.yaml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  proposal.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/certifi-client/: Cargo.toml
crates/certifi-client/src/: lib.rs
crates/certifi-server/: Cargo.toml
crates/certifi-server/src/: audit.rs  auth.rs  config.rs  db.rs  error.rs  events.rs  main.rs  models.rs  openapi.rs  rbac.rs
crates/certifi-server/src/handlers/: audit.rs  auth.rs  certificates.rs  docs.rs  domains.rs  events.rs  health.rs  integrations.rs  mod.rs  oidc.rs  roles.rs  settings.rs  tokens.rs  totp.rs  users.rs
crates/certifi-server/src/integrations/: cloudflare.rs  digitalocean.rs  gandi.rs  hetzner.rs  mod.rs  pdns.rs
crates/certifi-server/src/services/: acme.rs  email.rs  mod.rs  oidc.rs  pfx.rs  provisioning.rs  renewal.rs  secret.rs  sessions.rs  totp.rs
crates/certifi-types/: Cargo.toml
crates/certifi-types/src/: lib.rs
deploy/: nginx.conf
docs/: README.md  api.md  architecture.md  certificates.md  cli.md  development.md  dns-providers.md  installation.md  security.md
scripts/: build-cli.sh
web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  auth.tsx  index.css  main.tsx  theme.tsx  types.ts
web/src/api/: auth.ts  certificates.ts  client.ts  docs.ts  domains.ts  events.ts  integrations.ts  oidc.ts  roles.ts  settings.ts  tokens.ts  users.ts
web/src/components/: ConfirmDialog.tsx  Icons.tsx  Layout.tsx  Modal.tsx  PemViewer.tsx  StatusBadge.tsx  ThemeToggle.tsx  Toast.tsx
web/src/components/ui/: data-table.tsx  dialog.tsx  skeleton.tsx  theme-toggle.tsx  user-menu.tsx  wordmark.tsx
web/src/lib/: appMeta.ts  format.ts  perms.ts
web/src/pages/: Audit.tsx  CertificateDetail.tsx  CertificateNew.tsx  Certificates.tsx  Docs.tsx  Login.tsx  Roles.tsx  Security.tsx  Settings.tsx  Sso.tsx  Tokens.tsx  Users.tsx
