[workspace]
resolver = "2"
members = [
    "crates/certifi-server",
    "crates/certifi-types",
    "crates/certifi-client",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
# OpenAPI spec generation. utoipa derives schemas off the wire types so the
# /api/openapi.json the web admin renders can never drift from the actual
# request/response Rust types.
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

# Lint levels shared by every crate (each crate opts in with `[lints]
# workspace = true`). CI runs `cargo clippy --all-targets -- -D warnings`, so
# anything flagged here fails the build.
[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
