[package]
name = "certifi-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust client library and CLI for Certifi"

[lib]
name = "certifi_client"
path = "src/lib.rs"

[[bin]]
name = "certifi-cli"
path = "src/bin/cli.rs"

[dependencies]
certifi-types = { path = "../certifi-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"], default-features = false }
url = "2"
clap = { version = "4", features = ["derive", "env"] }
anyhow.workspace = true
dirs = "5"
rpassword = "7"
tempfile = "3"
# Pretty-print markdown for the `docs` subcommand. Falls back to raw output
# when stdout isn't a TTY (pipes, redirects), so `certifi-cli docs api > a.md`
# still produces clean markdown.
termimad = "0.31"
# Diagnostic tracing — hyper 1.x uses `tracing` natively, so RUST_LOG works
# once we install a subscriber. Only emits when RUST_LOG is set.
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
